--- a/src/pages/random-number/containers/Lottery/index.less
+++ b/src/pages/random-number/containers/Lottery/index.less
@@ -25,7 +25,7 @@
 
     .lottery-line{
       width: 100%;
-      margin-top: 8px;
+      margin-bottom: 16px;
 
       &-index, &-name, &-number{
         display: inline-block;
