--- a/src/pages/random-number/containers/HomePage/index.less
+++ b/src/pages/random-number/containers/HomePage/index.less
@@ -1,7 +1,122 @@
+@bgColor: rgb(38,113,210);
+@fontColor: rgb(113,153,221);
+
 .home{
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+
+  background: url(../../../../static/randomNumberbackground.jpg) no-repeat;
+
+  &-content{
+    width: 85%;
+    height: 100%;
+    z-index: 1;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+    .home-leftContent{
+      align-self:flex-start;
+
+      color: black;
+      width: 490px;
+      margin-top: 10vw;
+
+      .home-text-aelf{
+        font-size: 35px;
+        line-height: 50px;
+      }
+
+      .home-text-generation{
+        font-size: 50px;
+        font-weight: 800;
+        line-height: 50px;
+      }
+
+      .home-text-generation-zh{
+        font-size: 20px;
+      }
+
+      @learnMoreHeight: 30px;
+      .home-learnMore{
+        display: block;
+        width: 100px;
+        color: white;
+        background-color: @bgColor;
+        border-radius: 5px;
+        text-align: center;
+        font-size: 18px;
+        height: @learnMoreHeight;
+        line-height: @learnMoreHeight;
+        margin-top: 16px;
+      }
+
+    }
+
+    @contentMarginTop: 40px;
+    .home-rightContent{
+      width: 350px;
+      height: 400px;
+      border-radius: 10px;
+      background-color: white;
+      box-shadow: 0 0 5px rgb(226,226,226);
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      .home-generationRandom{
+        color:@fontColor;
+        font-size: 20px;
+        margin-top: @contentMarginTop;
+      }
+
+      .home-input{
+        display: flex;
+        align-items: center;
+        margin-top: @contentMarginTop;
+
+        &-text{
+          width: 60px;
+          margin-right: 15px;
+          text-align: right;
+        }
+
+        &-frame{
+          width: 200px;
+        }
+      }
+
+      .home-inputErr{
+        margin: 10px 0 -30px;
+        color: red;
+      }
+
+      .home-generate{
+        width: 250px;
+        height: 32px;
+        font-size: 18px;
+        margin-top: @contentMarginTop;
+      }
+    }
+  }
+
+
+  &-bottom-bg{
+    width: 100%;
+    height: 29vw;
+    // background: url(../../../../static/randomBottomBg.png) no-repeat;
+    position: absolute;
+    left: 0;
+    bottom: 80px;
+    z-index: 0;
+  }
 
   &-range{
     width: 70vw;
@@ -23,4 +138,12 @@
     text-align: center;
     word-break: break-all;
   }
+}
+
+.hidden{
+  visibility: hidden;
+}
+
+button{
+  outline:none;
 }
