--- a/src/pages/random-number/containers/Lottery/index.less
+++ b/src/pages/random-number/containers/Lottery/index.less
@@ -1,9 +1,52 @@
 @lotteryMargin: 16px;
+@btnHeight: 20px;
+@bgColor: rgb(38,113,210);
 
 .lottery{
   width: 100%;
   height: 100%;
 
+  background: no-repeat center url(../../../../static/lottery-bg.jpg);
+  display: flex;
+
+  &-content{
+    margin-left: 15%;
+    margin-top: 10vw;
+    color: black;
+
+    .lottery-Building{
+      font-size: 35px;
+      line-height: 50px;
+    }
+
+    .lottery-lotSystem{
+      font-size: 50px;
+      font-weight: 800;
+      line-height: 50px;
+    }
+
+    .lottery-lotSystem-zh{
+      font-size: 20px;
+    }
+
+    @lotBtnHeight: 35px;
+    .lottery-lotBtn{
+        width: 120px;
+        color: white;
+        background-color: @bgColor;
+        border-radius: 5px;
+        text-align: center;
+        font-size: 18px;
+        height: @lotBtnHeight;
+        line-height: @lotBtnHeight;
+        margin-top: 16px;
+        cursor: pointer;
+        border: none;
+    }
+
+  }
+
+  /*
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,11 +64,14 @@
     width: 90vw;
     font-size: 4vw;
     margin: @lotteryMargin 0;
-    overflow-y: scroll;
+
+    display: flex;
+    flex-direction: column;
 
     .lottery-line{
       width: 100%;
       margin-bottom: 16px;
+      height: 50px;
 
       &-index, &-name, &-number{
         display: inline-block;
@@ -41,9 +87,12 @@
     font-size: 4.6vw;
     line-height: 12vw;
     margin-bottom: @lotteryMargin;
+    box-sizing: border-box;
   }
 
   &-modal{
     width: 70vw;
   }
+
+  */
 }
