--- a/src/pages/random-number/index.less
+++ b/src/pages/random-number/index.less
@@ -1,4 +1,19 @@
 html, body, #app {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#app{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 1000px;
+}
+
+.app-content{
+  width: 100%;
+  height: calc(100% - 160px);
+  background-color: white;
 }
