--- a/src/pages/random-number/components/ScrollList/index.less
+++ b/src/pages/random-number/components/ScrollList/index.less
@@ -10,7 +10,7 @@
   &-line{
     width: 100%;
     margin-bottom: 16px;
-    height: @listHeight;
+    // height: @listHeight;
 
     &-index, &-name, &-number{
       display: inline-block;
