--- a/src/pages/random-number/containers/Begin/index.less
+++ b/src/pages/random-number/containers/Begin/index.less
@@ -1,54 +1,85 @@
 @lotteryMargin: 16px;
 @btnHeight: 20px;
+@bgColor: rgb(198,209,228);
+@btnColor: rgb(38,113,210);
 
 .begin{
   width: 100%;
   height: 100%;
+  background-color: @bgColor;
 
   display: flex;
-  flex-direction: column;
   align-items: center;
-  //justify-content: space-between;
-
-  &-title{
-    text-align: center;
-    font-size: 7vw;
-    width: 100%;
-
-  }
+  justify-content: center;
 
   &-content{
-    flex: 1;
-    width: 90vw;
-    font-size: 4vw;
-    margin: @lotteryMargin 0;
+    width: 85%;
+    // max-width: 1000px;
+    background-color: white;
+    height: 80%;
+
+    box-sizing: border-box;
+    padding: 30px 60px;
+    border-radius: 10px;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
-    .lottery-line{
+    .begin-title{
+      font-size: 20px;
+      font-weight: bolder;
+    }
+
+    .begin-hr{
       width: 100%;
-      margin-bottom: 16px;
-      height: 50px;
+      height: 2px;
+      background-color: #000;
+      margin: 10px 0;
+    }
 
-      &-index, &-name, &-number{
+    @listWidth: 45%;
+    .begin-list{
+      width: 100%;
+      height: calc(100% - 100px);
+
+      &-left,&-right{
+        width: @listWidth;
         display: inline-block;
-        width: 33.333%;
-        text-align: center;
+        height: 100%;
       }
+
+      &-right{
+        margin-left: 10%;
+      }
+
+      &-title{
+        margin-bottom: 15px;
+        // padding-right: 10px;
+        font-weight: bolder;
+        font-size: 18px;
+
+        display: flex;
+        justify-content: center;
+      }
+
+      &-content{
+        height: calc(100% - 40px); //350px;
+        overflow-y: overlay;
+
+        display: flex;
+        justify-content: center;
+      }
+      
+    }
+
+    @lotBtnHeight: 35px;
+    .begin-btn{
+      margin-top: 15px;
+      width: 120px;
+      font-size: 18px;
+      height: @lotBtnHeight;
     }
   }
 
-  &-btn{
-    width: 70vw;
-    height: 12vw;
-    font-size: 4.6vw;
-    line-height: 12vw;
-    margin-bottom: @lotteryMargin;
-    box-sizing: border-box;
-  }
-
-  &-modal{
-    width: 70vw;
-  }
 }
