--- a/src/pages/random-number/containers/HomePage/index.less
+++ b/src/pages/random-number/containers/HomePage/index.less
@@ -44,6 +44,7 @@
       @learnMoreHeight: @base * 0.06; // 30px;
       .home-learnMore{
         display: block;
+        min-width: 100px;
         width: @base * 0.2; //100px;
         color: white;
         background-color: @bgColor;
