fix: 🐛 remove low-case bugs

--- a/src/pages/random-number/components/ListTitle/index.less
+++ b/src/pages/random-number/components/ListTitle/index.less
@@ -1,5 +1,5 @@
-.list-title{
-  display: inline-block;
-  width: 33.333%;
+.list-title {
   text-align: center;
+  font-size: 18px;
+  font-weight: bold;
 }
