--- a/src/pages/random-number/components/ScrollList/index.less
+++ b/src/pages/random-number/components/ScrollList/index.less
@@ -1,42 +1,24 @@
-@listHeight: 50px;
-.scroll{
+.random-list {
   width: 100%;
   height: 100%;
-  // flex: 1;
-  overflow-y: scroll;
-  box-sizing: border-box;
-  // overflow: hidden;
-
-  &-line{
-    width: 100%;
-    margin-bottom: 16px;
-    // height: @listHeight;
-
-    &-index, &-name, &-number{
-      display: inline-block;
-      width: 33.333%;
+  overflow: auto;
+  &-title, &-content {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
+  &-title {
+    .ant-row {
+      width: 50%;
+    }
+  }
+  &-content {
+    height: 100%;
+  }
+  .content-list {
+    width: 50%;
+    .ant-col {
       text-align: center;
     }
   }
-
-}
-
-.overflow-hidden{
-  overflow: hidden;
-}
-
-.scroll-margin-top{
-  margin-top: @listHeight;
-}
-
-.animate{
-  transition:all .8s;
-}
-.opacityAnimation{
-  animation:opacityAnimation 1s 1;
-}
-
-@keyframes opacityAnimation{
-  from {opacity:0;}
-  to {opacity:1;}
 }
