--- a/src/pages/random-number/containers/HomePage/index.less
+++ b/src/pages/random-number/containers/HomePage/index.less
@@ -101,6 +101,10 @@
         }
       }
 
+      .home-verify-value {
+        color: rgba(0, 0, 0, 0.65);
+      }
+
       .home-inputErr{
         margin: 10px 0 -20px;
         color: red;
