--- a/src/pages/random-number/containers/VerifyRandom/index.less
+++ b/src/pages/random-number/containers/VerifyRandom/index.less
@@ -20,6 +20,7 @@
   &-content {
     width: 85%;
     height: 80%;
+    overflow: auto;
 
     background: #ffffff;
 
@@ -49,7 +50,7 @@
     display: flex;
     flex-direction: column;
 
-    height: calc(100% - 248px);
+    height: calc(100% - 105px);
 
     &-content {
       display: flex;
@@ -88,6 +89,7 @@
   .verify {
 
     &-detail {
+      height: auto;
       &-value {
         flex-direction: column;
         p {
