--- a/src/pages/random-number/containers/VerifyRandom/index.less
+++ b/src/pages/random-number/containers/VerifyRandom/index.less
@@ -50,28 +50,21 @@
     display: flex;
     flex-direction: column;
 
-    height: calc(100% - 105px);
-
     &-content {
       display: flex;
       flex-direction: column;
-
-      margin: auto;
+      margin: 0 auto;
     }
 
     &-value {
-      display: flex;
-      align-items: flex-start;
-
       p {
         &:first-child {
-          width: 100px;
           font-weight: 800;
-          text-align: right;
         }
 
         &:last-child {
-          text-align: left;
+          margin-left: 10px;
+          word-break: break-all;
         }
       }
     }
@@ -81,27 +74,6 @@
 
       width: 120px;
       height: 35px;
-    }
-  }
-}
-
-@media(max-width: 768px) {
-  .verify {
-
-    &-detail {
-      height: auto;
-      &-value {
-        flex-direction: column;
-        p {
-          &:first-child {
-            text-align: left;
-          }
-          &:last-child {
-            margin-left: 10px;
-          }
-          word-break: break-all;
-        }
-      }
     }
   }
 }
