fix: fixed display issues

--- a/src/pages/random-number/containers/HomePage/index.less
+++ b/src/pages/random-number/containers/HomePage/index.less
@@ -218,6 +218,8 @@ button{
         .home-verify {
           margin-top: 15px;
           width: 100%;
+          display: flex;
+          justify-content: center;
         }
 
         .home-inputErr {
