--- a/src/pages/random-number/containers/VerifyRandom/index.less
+++ b/src/pages/random-number/containers/VerifyRandom/index.less
@@ -69,6 +69,12 @@
       }
     }
 
+    .verify-desc {
+      text-align: center;
+      color: rgba(0, 0, 0, 0.5);
+      font-size: 12px;
+    }
+
     &-btn {
       align-self: center;
 
