--- a/src/pages/random-number/components/StepLoading/index.less
+++ b/src/pages/random-number/components/StepLoading/index.less
@@ -1,15 +1,21 @@
 .status-loading {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+  position: fixed;
 
+  z-index: 999;
   &-status-container {
-    position: absolute;
+    position: fixed;
     top: 50%;
-    transform: translateY(-50%);
-    z-index: 99;
+    left: 50%;
+
+    width: 300px;
+    background:#ffffff;
+
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    border-radius: 4px;
+    padding: 25px;
+    // box-shadow: 0 0 10px #e2e2e2;;
+    // padding: 50px;
 
     .status-loading-status-item {
       display: flex;
@@ -20,19 +26,26 @@
 
       &:first-child, &:nth-child(4), &:last-child {
         p {
-          font-size: 14px;
+          font-size: 16px;
           font-weight: 600;
         }
       }
 
-      p {
+      &:last-child {
+        margin: 0;
+        p {
+          margin: 0;
+        }
+      }
+
+      p {    
         margin-bottom: 10px;
-        font-size: 12px;
+        font-size: 14px;
         white-space: nowrap;
       }
 
       p.active {
-       font-size: 16px;
+       font-size: 18px;
        color: #2671d2; 
       }
     }
@@ -51,43 +64,30 @@
       }
     }
 
-    .finish.circle, .active.circle {
-      &::after {
-        background: #2671d2;
-      }
+    .circle.active::after {
+      animation: loading .5s infinite linear alternate;
     }
-  }
 
-  &-container {
-    transition: opacity .3s;
-    &::after {
-      content: "";
-
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 10;
-
-      width: 100%;
-      height: 100%;
-
-      background: #ffffff;
-      opacity: 0;
-      transition: all .3s;
-
-      pointer-events: none;
+    .circle.finish::after {
+      background: #2671d2;
     }
   }
 
   &-blur {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 999;
     clear: both;
     overflow: hidden;
     opacity: .5;
     user-select: none;
     pointer-events: none;
-
+    background:rgba(0, 0, 0, 0.45);
+    opacity: 0.6;
+    transition: all .3s;
     &::after {
       opacity: .6;
       pointer-events: auto;
@@ -101,14 +101,15 @@
     &-container {
       width: 100%;
     }
+  }
+}
 
-    &-status-container {
-      .status-loading-status-item {
-        margin-bottom: 5px;
-        p {
-          margin-bottom: 5px;
-        }
-      }
-    }
+@keyframes loading {
+  0% {
+    background: #2671d2;
+  }
+
+  100% {
+    background: #ffffff;
   }
 }
