--- a/src/pages/random-number/containers/HomePage/index.less
+++ b/src/pages/random-number/containers/HomePage/index.less
@@ -76,6 +76,7 @@
       .home-generationRandom{
         color:@fontColor;
         font-size: 20px;
+        margin-top: @contentMarginTop;
       }
 
       .home-input{
